download new artifact

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,9 +1,8 @@
 [target.riscv32imac-unknown-none-elf]
-runner = "espflash flash --monitor -T ./partitions.csv --erase-parts otadata"
+runner = "./flash.bat target/riscv32imac-unknown-none-elf/debug/esp32-mender-client"
 
 [env]
 ESP_LOG="INFO"
-# with "true" - it makes WiFi/BLE performance worse
 ESP_WIFI_CONFIG_PHY_ENABLE_USB = "false"
 
 [build]
