fix environment variables

--- a/.github/workflows/clippy_fmt_check.yml
+++ b/.github/workflows/clippy_fmt_check.yml
@@ -2,8 +2,8 @@ on: [push, pull_request]
 
 name: CI
 env:
-  MENDER_CLIENT_WIFI_SSID=""
-  MENDER_CLIENT_WIFI_PSK=""
+  MENDER_CLIENT_WIFI_SSID: "ssid"
+  MENDER_CLIENT_WIFI_PSK: "psk"
 
 jobs:
   build:
