--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,17 +4,10 @@ version = "0.1.0"
 authors = ["virust-ai"]
 edition = "2021"
 license = "MIT OR Apache-2.0"
+description = "Mender client library for esp32"
+repository = "https://github.com/virust-ai/esp32-mender-client"
 
 [dependencies]
-esp-backtrace = { version = "0.15.0", features = [
-    "esp32c6",
-    "exception-handler",
-    "panic-handler",
-    "println",
-] }
-esp-hal = { version = "0.23.1", features = [ "esp32c6" ] }
-esp-println = { version = "0.13.0", features = ["esp32c6", "log"] }
-esp-hal-embassy     = { version = "0.6.0", features = ["esp32c6"] }
 embassy-executor    = { version = "0.7.0", features = ["task-arena-size-131072"] }
 embassy-net = { version = "0.6.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet", "dns"] }
 embassy-time        = "0.4.0"
@@ -22,12 +15,7 @@ embassy-sync        = "0.6.1"
 static_cell         = { version = "2.1.0", features = ["nightly"] }
 log = { version = "0.4.22" }
 esp-alloc = { version = "0.6.0" }
-embedded-io = "0.6.1"
-esp-wifi = { version = "0.12.0", features = [
-    "esp32c6",
-    "utils",
-    "wifi",
-] }
+#embedded-io = "0.6.1"
 heapless = { version = "0.8.0", default-features = false }
 embedded-io-async = "0.6.1"
 serde-json-core = "0.6.0"
@@ -38,18 +26,20 @@ crc = "3.2.1"
 base64 = { version = "0.22.1", default-features = false }
 sha2 = { version = "0.10.8", default-features = false }
 digest = "0.10.7"
-esp-storage = { version = "0.4.0" , features = [ "esp32c6" ] }
 embedded-storage = "0.3.1"
 serde = { version = "1.0.217", default-features = false, features = ["derive"] }
 embedded-websocket = { version = "0.9.4", default-features = false }
-#esp-hal-ota = { version = "0.3.2", features = [ "esp32c6" ] }
 defmt = "0.3.10"
+
+esp-hal = { version = "0.23.1", optional = true }
+esp-storage = { version = "0.4.0", optional = true }
+
+spin = {version = "0.9.8", default-features = false, features = ["once", "portable_atomic"], optional = true}
 
 [profile.dev]
 # Rust debug is too slow.
 # For debug builds always builds with some optimization
 opt-level = "s"
-
 
 [profile.release]
 codegen-units = 16
@@ -64,8 +54,48 @@ panic = "abort"
 [features]
 default = ["mender_client_configure_storage"]
 
-# Configure storage feature
+
 mender_client_configure_storage = []
 
-# You can also create feature groups
-full = ["mender_client_configure_storage"]
+
+esp32c2 = [
+    "dep:esp-hal",
+    "dep:esp-storage",
+    "esp-hal/esp32c2",
+    "esp-storage/esp32c2",
+]
+esp32c3 = [
+    "dep:esp-hal",
+    "dep:esp-storage",
+    "esp-hal/esp32c3",
+    "esp-storage/esp32c3",
+    "dep:spin",
+]
+esp32c6 = [
+    "dep:esp-hal",
+    "dep:esp-storage",
+    "esp-hal/esp32c6",
+    "esp-storage/esp32c6",
+]
+esp32h2 = [
+    "dep:esp-hal",
+    "dep:esp-storage",
+    "esp-hal/esp32h2",
+    "esp-storage/esp32h2",
+]
+esp32   = [
+    "dep:esp-hal",
+    "dep:esp-storage",
+    "esp-hal/esp32",
+    "esp-storage/esp32",
+]
+esp32s2 = [
+    "dep:esp-hal",
+    "dep:esp-storage",
+]
+esp32s3 = [
+    "dep:esp-hal",
+    "dep:esp-storage",
+    "esp-hal/esp32s3",
+    "esp-storage/esp32s3",
+]
